--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -30,4 +34,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+}
+
+.day-list {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr)
+}
+
+.drag-target {
+  border: 1px dashed silver;
 }
